Add flag to remove_field to toggle regex matching