@@ -25,22 +25,23 @@ import org.graylog.plugins.pipelineprocessor.ast.functions.ParameterDescriptor;
 import org.graylog.plugins.pipelineprocessor.rulebuilder.RuleBuilderFunctionGroup;
 import org.graylog2.plugin.Message;
 
-import java.util.stream.Collectors;
-
 import static org.graylog.plugins.pipelineprocessor.ast.functions.ParameterDescriptor.type;
 
 public class RemoveField extends AbstractFunction<Void> {
     public static final String NAME = "remove_field";
     public static final String FIELD = "field";
     public static final String INVERT = "invert";
+    public static final String IS_REGEX = "is_regex";
     private final ParameterDescriptor<String, String> fieldParam;
     private final ParameterDescriptor<Message, Message> messageParam;
     private final ParameterDescriptor<Boolean, Boolean> invertParam;
+    private final ParameterDescriptor<Boolean, Boolean> isRegexParam;
 
     public RemoveField() {
         fieldParam = ParameterDescriptor.string(FIELD).description("The field(s) to remove (name or regex)").build();
         messageParam = type("message", Message.class).optional().description("The message to use, defaults to '$message'").build();
-        invertParam = ParameterDescriptor.bool(INVERT).optional().description("Invert: keep matching field(s) and remove all others").build();
+        invertParam = ParameterDescriptor.bool(INVERT).optional().description("Keep matching field(s) and remove all others, defaults to false").build();
+        isRegexParam = ParameterDescriptor.bool(IS_REGEX).optional().description("Perform regex-matching on the field name pattern, defaults to false").build();
     }
 
     @Override
@@ -48,26 +49,36 @@ public class RemoveField extends AbstractFunction<Void> {
         final String fieldOrPattern = fieldParam.required(args, context);
         final Message message = messageParam.optional(args, context).orElse(context.currentMessage());
         final Boolean invert = invertParam.optional(args, context).orElse(false);
+        final Boolean isRegex = isRegexParam.optional(args, context).orElse(false);
 
-        message.getFieldNames().stream()
+        if (Boolean.TRUE.equals(isRegex)) {
+            message.getFieldNames().stream()
                 .filter(f -> {
                     boolean condition = f.matches(fieldOrPattern);
-                    return invert ? !condition : condition;
+                    return Boolean.TRUE.equals(invert) ? !condition : condition;
                 })
-                .collect(Collectors.toList()) // required to avoid ConcurrentModificationException
+                    .toList() // required to avoid ConcurrentModificationException
                 .forEach(message::removeField);
-
+        } else {
+            if (Boolean.TRUE.equals(invert)) {
+                message.getFieldNames().stream()
+                        .filter(f -> f.equals(fieldOrPattern))
+                        .toList() // required to avoid ConcurrentModificationException
+                        .forEach(message::removeField);
+            } else {
+                message.removeField(fieldOrPattern);
+            }
+        }
         return null;
     }
-
 
     @Override
     public FunctionDescriptor<Void> descriptor() {
         return FunctionDescriptor.<Void>builder()
                 .name(NAME)
                 .returnType(Void.class)
-                .params(ImmutableList.of(fieldParam, messageParam, invertParam))
-                .description("Removes the named field from message, unless the field is reserved. If no specific message is provided, it removes the field from the currently processed message.")
+                .params(ImmutableList.of(fieldParam, messageParam, invertParam, isRegexParam))
+                .description("Removes one or more fields from message, unless the field is reserved. If no specific message is provided, it removes fields from the currently processed message.")
                 .ruleBuilderEnabled()
                 .ruleBuilderName("Remove field")
                 .ruleBuilderTitle("Remove field '${field}'")
